--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "minecraft-on-ec2",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "moyomoto",
-  "license": "ISC",
+	"name": "minecraft-on-ec2",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"code:check": "biome check --write"
+	},
+	"author": "moyomoto",
+	"license": "ISC",
+	"devDependencies": {
+		"@biomejs/biome": "^2.0.0-beta.5"
+	}
 }
